extended homescreen on mobile still showing to changed back to old fix

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -164,6 +164,11 @@ header {
 
 @media screen and (max-width: 600px) {
 
+	header {
+		height: 90vh;
+/*		overflow: hidden;*/
+	}
+
 	.header__container {
 		grid-template-rows: 33% 66%;
 	}
